--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "psr/log": "^1.0.1",
     "php-http/message-factory": "v1.0.2",
     "php-http/discovery": "v1.0.0",
+    "besimple/soap-client": "0.2.*@dev",
     "wsdl2phpgenerator/wsdl2phpgenerator" : "*"
   },
   "require-dev": {
