--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "rdarricau/chronopost",
+  "name": "MonsieurGourmand/chronopost",
   "description": "Librairie PHP pour interagir avec les webservices Chronopost",
   "authors": [
     {
